# promptlab

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
assets/: demo_script.py
src/promptlab/: __init__.py  abtest.py  cli.py  diff.py  prompt.py  store.py
tests/: test_abtest.py  test_diff.py  test_prompt.py  test_store.py
