[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptlab-ai"
version = "2.0.0"
description = "Version, diff, and A/B test your LLM prompts — like git for prompts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Naveen Kumar Baskaran", email = "naveenkb142@gmail.com" },
]
keywords = [
    "prompt", "llm", "versioning", "testing", "ab-test",
    "prompt-engineering", "ai", "openai", "template", "prompt-management",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "jinja2>=3.1",
]

[project.optional-dependencies]
eval = ["litellm>=1.40"]
all = ["litellm>=1.40", "jinja2>=3.1"]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
promptlab = "promptlab.cli:main"

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/promptlab"
Repository = "https://github.com/naveenkumarbaskaran/promptlab"
Issues = "https://github.com/naveenkumarbaskaran/promptlab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/promptlab"]

[tool.hatch.build.targets.sdist]
include = ["src/promptlab", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
